--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,19 @@
+<ion-app>
+  <ion-menu contentId="main-content">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>
+          <ion-img src="assets/icon/TrenMenu.svg" style="height: 50px; width: auto;"></ion-img>
+        </ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content class="ion-padding">
+      <ion-button expand="block" routerLink="/home"><h5>Inicio</h5></ion-button>
+      <ion-button expand="block" routerLink="/circuito"><h5>Circuito</h5></ion-button>
+    </ion-content>
+  </ion-menu>
 
-<ion-menu contentId="main-content">
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>
-        <ion-img src="assets/icon/TrenMenu.svg" style="height: 50px; width: auto;"></ion-img>
-      </ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <ion-content class="ion-padding">
-  <ion-img ></ion-img>
-    <ion-button expand="block" routerLink="/circuito"><h5>Circuito</h5></ion-button>
-    <ion-button expand="block" routerLink="/proyecto"><h5>Proyecto</h5></ion-button>
-    <ion-button expand="block" routerLink="/informe"><h5>Informe</h5></ion-button>
-
-  </ion-content>
-</ion-menu>
-<div class="ion-page" id="main-content">
-  <ion-content class="ion-padding"> 
-    <ion-app>
-      <ion-router-outlet></ion-router-outlet>
-    </ion-app>
-  </ion-content>
-</div>
+  <div class="ion-page" id="main-content">
+    <ion-router-outlet></ion-router-outlet>
+  </div>
+</ion-app>
